--- a/head.html
+++ b/head.html
@@ -9,5 +9,6 @@
     <h1>Heading1</h1>
     <h2>Heading2</h2>
     <h3>Heading3</h3>
+    <img src="https://i.ytimg.com/vi/-jT9vhlDLo4/maxresdefault.jpg" alt="guna" title="guna" >
 </body>
 </html>
