--- a/collab.html
+++ b/collab.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <h1>Today's Collab</h1>
-    <h2>Jai Ballaya</h2>
-    <h1>MOULI VARA PRASAD(updated by tester)</h1>
-    <h1>Todays work done</h1>
-    <h1>we will rock</h1>
-    <h1>sri</h1>
+    <h2>AbdulRaheem</h2>
+    <h1>MOULI VARA PRASAD(updated by Mouli)</h1>
+    <h1>Praveen(updated by Praveen )</h1>
+    <h1>Srikanth (Updated by Srikanth)</h1>
 </body>
 </html>
